name:                hspec-snap
version:             0.1.0.0
synopsis:            A library for BDD-style testing with the Snap Web Framework
homepage:            https://github.com/dbp/hspec-snap
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
extra-source-files: CHANGELOG
category:            Web, Snap
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
        Test.Hspec.Snap
  hs-source-dirs: src
  build-depends:       HandsomeSoup
                     , base >= 4.6 && < 4.8
                     , bytestring
                     , containers
                     , digestive-functors
                     , hspec2 >= 0.4 && < 0.5
                     , hxt
                     , lens
                     , mtl >= 2 && < 3
                     , snap
                     , snap-core
                     , text >= 0.11 && < 1.2
                     , transformers == 0.3.*


Test-Suite test-hspec-snap
    type:       exitcode-stdio-1.0
    hs-source-dirs: spec
    main-is: Main.hs
    build-depends:     HandsomeSoup
                     , base >= 4.6 && < 4.8
                     , bytestring
                     , containers
                     , digestive-functors
                     , hspec2 >= 0.4 && < 0.5
                     , hxt
                     , lens
                     , mtl >= 2 && < 3
                     , snap
                     , snap-core
                     , text >= 0.11 && < 1.2
                     , transformers == 0.3.*
    build-depends: hspec-snap == 0.1.0.0